bench/gateways/envoy/jwt/envoy.yaml
static_resources:
  listeners:
    - name: plain
      address:
        socket_address: { address: 0.0.0.0, port_value: 8000 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: bench
                codec_type: AUTO
                route_config:
                  name: bench
                  virtual_hosts:
                    - name: bench
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/bench/" }
                          route: { cluster: upstream }
                http_filters:
                  - name: envoy.filters.http.jwt_authn
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
                      providers:
                        bench:
                          issuer: "@@JWT_ISSUER@@"
                          forward: true
                          local_jwks:
                            inline_string: '@@JWKS_JSON@@'
                          from_headers:
                            - name: Authorization
                              value_prefix: "Bearer "
                      rules:
                        - match: { prefix: "/bench/" }
                          requires: { provider_name: bench }
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: upstream
      type: STRICT_DNS
      connect_timeout: 1s
      circuit_breakers:
        thresholds:
          - max_connections: 1000000
            max_pending_requests: 1000000
            max_requests: 1000000
            max_retries: 1000000
      load_assignment:
        cluster_name: upstream
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: { address: "@@UPSTREAM_HOST@@", port_value: @@UPSTREAM_PORT@@ }
